fix: overflow tables result

--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -5,3 +5,16 @@
 .toggle-content.is-visible {
 	display: block;
 }
+
+.table.table-ellipsis tbody td {
+	max-width: 100px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.table.table-ellipsis tbody td:hover {
+	text-overflow: clip;
+	white-space: normal;
+	word-break: break-all;
+}
